# quran-app

./: .dockerignore  .gitignore  README.md  compose_down_up.sh  deploy.sh  docker-compose-dev.yml  docker-compose-prod-arm.yml  docker-compose-prod.yml  docker-compose-staging.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: google_api.py  groq_api.py  ingest_pipeline.py  main.py  nvidia_api.py  openrouter_api.py  retrieve_relevant_context.py
app/api/: google_api.py  groq_api.py  ingest_pipeline.py  openrouter_api.py  retrieve_relevant_context.py
app/utils/: utils.py
